--- a/Web Kelas V1/1.html
+++ b/Web Kelas V1/1.html
@@ -21,7 +21,7 @@
             <div class="tb">
                 <div class="kiri">
                     <div class="gambar">
-                        <img src="/foto/pp[1].png" alt="RPL 58!">
+                        <img src="./foto/pp[1].png" alt="RPL 58!">
                     </div>
                     <p>Command SPES!</p>
                 </div>    
@@ -192,7 +192,7 @@
                 <div class="dashboard">
                     <div class="badann">
                         <div class="foto1">
-                            <img src="/foto/pp[1].png">
+                            <img src="./foto/pp[1].png">
                         </div>
                         <div class="penjelasan">
                             <h1>Command SPES!</h1>
@@ -226,4 +226,5 @@
 
        <script src="main.js"></script>
 </body>
+
 </html>
