--- a/Web Kelas V1/1.html
+++ b/Web Kelas V1/1.html
@@ -78,7 +78,7 @@
                                     <h1>Ketuaa</h1>
                                 </div>
                                 <div class="foto">
-                                    <img src="/foto/gambarr.jpg">
+                                    <img src="./foto/gambarr.jpg">
                                 </div>
                                 <div class="kata">
                                     <h3>Pentol Plenger</h3>
@@ -89,7 +89,7 @@
                         <div class="bungkus">
                             <div class="kotak">
                                 <div class="foto">
-                                    <img src="/foto/gambarr.jpg">
+                                    <img src="./foto/gambarr.jpg">
                                 </div>
                                 <div class="kata">
                                     <h3>Nama</h3>
@@ -98,7 +98,7 @@
                             </div>
                         <div class="kotak">
                             <div class="foto">
-                                <img src="/foto/Screenshot 2024-08-10 145544.png">
+                                <img src="./foto/Screenshot 2024-08-10 145544.png">
                             </div>
                             <div class="kata">
                                 <h3>Nama</h3>
@@ -107,7 +107,7 @@
                         </div>
                         <div class="kotak">
                             <div class="foto">
-                                <img src="/foto/Screenshot 2024-08-10 145956.png">
+                                <img src="./foto/Screenshot 2024-08-10 145956.png">
                             </div>
                             <div class="kata">
                                 <h3>Nama</h3>
@@ -116,7 +116,7 @@
                         </div>
                         <div class="kotak">
                             <div class="foto">
-                                <img src="/foto/Screenshot 2024-08-10 145956.png">
+                                <img src="./foto/Screenshot 2024-08-10 145956.png">
                             </div>
                             <div class="kata">
                                 <h3>Nama </h3>
@@ -125,7 +125,7 @@
                         </div>
                         <div class="kotak">
                             <div class="foto">
-                                <img src="/foto/Screenshot 2024-08-10 145956.png">
+                                <img src="./foto/Screenshot 2024-08-10 145956.png">
                             </div>
                             <div class="kata">
                                 <h3>Nama </h3>
@@ -135,7 +135,7 @@
                      
                             <div class="kotak">
                                 <div class="foto">
-                                    <img src="/foto/gambarr.jpg">
+                                    <img src="./foto/gambarr.jpg">
                                 </div>
                                 <div class="kata">
                                     <h3>Nama </h3>
@@ -144,7 +144,7 @@
                             </div>
                             <div class="kotak">
                                 <div class="foto">
-                                    <img src="/foto/gambarr.jpg">
+                                    <img src="./foto/gambarr.jpg">
                                 </div>
                                 <div class="kata">
                                     <h3>Nama</h3>
@@ -153,7 +153,7 @@
                             </div>
                             <div class="kotak">
                                 <div class="foto">
-                                    <img src="/foto/gambarr.jpg">
+                                    <img src="./foto/gambarr.jpg">
                                 </div>
                                 <div class="kata">
                                     <h3>Nama </h3>
@@ -165,7 +165,7 @@
                                     
                                 </div>
                                 <div class="foto">
-                                    <img src="/foto/gambarr.jpg">
+                                    <img src="./foto/gambarr.jpg">
                                 </div>
                                 <div class="kata">
                                     <h3>Nama</h3>
@@ -174,7 +174,7 @@
                             </div>
                             <div class="kotak">
                                 <div class="foto">
-                                    <img src="/foto/gambarr.jpg">
+                                    <img src="./foto/gambarr.jpg">
                                 </div>
                                 <div class="kata">
                                     <h3>Nama</h3>
@@ -228,3 +228,4 @@
 </body>
 
 </html>
+
